[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/Shaders/outline.gdshader" type="Shader" id=1]
[ext_resource path="res://resources/misc/bombs.webp" type="Texture2D" id=2]
[ext_resource path="res://scenes/items/bombexplosion.gd" type="Script" id=3]
[ext_resource path="res://resources/FX/flame_fx_webp.webp" type="Texture2D" id=4]
[ext_resource path="res://scenes/Shaders/Impact.tscn" type="PackedScene" id=5]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 1 )
shader_param/line_color = Color( 1, 1, 1, 1 )
shader_param/line_thickness = 1.0

[sub_resource type="CapsuleShape2D" id=1]
radius = 116.623
height = 30.0

[sub_resource type="Animation" id=3]
resource_name = "EXPLODE"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.7 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite2:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite2:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PackedFloat32Array( 0, 0.5, 0.7 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PackedFloat32Array( 0, 0.3 ),
"transitions": PackedFloat32Array( 1, 1 ),
"values": [ {
"args": [  ],
"method": "hurt"
}, {
"args": [  ],
"method": "shake"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Impact:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "method"
tracks/6/path = NodePath("Impact")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PackedFloat32Array( 0.1 ),
"transitions": PackedFloat32Array( 1 ),
"values": [ {
"args": [  ],
"method": "impact"
} ]
}

[sub_resource type="Animation" id=4]
resource_name = "FLASHING"
length = 1.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0.1, 1.4 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2D:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 0.5, 0.9, 1.4 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Impact:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2D:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite2:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite2D:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ true ]
}

[node name="Area2D" type="Area2D"]
script = ExtResource( 3 )

[node name="Sprite2D" type="Sprite2D" parent="." groups=["weapon"]]
self_modulate = Color( 0, 0, 0, 1 )
material = SubResource( 2 )
position = Vector2( 11.0905, 13.6862 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite2D" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( -25.3984, -161.915 )
scale = Vector2( 0.746638, 0.746638 )
texture = ExtResource( 4 )
hframes = 3
vframes = 2
frame = 2

[node name="Impact" parent="." instance=ExtResource( 5 )]
visible = false
position = Vector2( -2.17523, -52.3351 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 10.8839, 8.27728 )
scale = Vector2( 1.46039, 1.35361 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/EXPLODE = SubResource( 3 )
anims/FLASHING = SubResource( 4 )
anims/RESET = SubResource( 5 )

[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
